added active case timeline map

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
             <div class="ftco-media-1">
               <div class="ftco-media-1-inner">
-                <a href="viz-single.html" class="d-inline-block mb-4"><img src="images/velocity_chart.jpg" alt="FImageo" class="img-fluid"></a>
+                <a href="viz-single-Tableau_Active.html" class="d-inline-block mb-4"><img src="images/velocity_chart.jpg" alt="FImageo" class="img-fluid"></a>
                 <div class="ftco-media-details">
-                  <h3>Velocity Chart</h3>
+                  <h3>Active Cases</h3>
                   <p>Global</p>
-                  <strong>HTML Line Chart</strong>
+                  <strong>Tableau</strong>
                 </div>
   
               </div> 
