--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
               <div class="ftco-media-1">
                   <div class="ftco-media-1-inner">
-                    <a href="viz-single.html" class="d-inline-block mb-4"><img src="images/spread_map.jpg" alt="Image" class="img-fluid"></a>
+                    <a href="viz-single-D3_race_chart.html" class="d-inline-block mb-4"><img src="images/spread_map.jpg" alt="Image" class="img-fluid"></a>
                     <div class="ftco-media-details">
-                      <h3>Spread Map</h3>
-                      <p>Singapore</p>
-                      <strong>D3 Force Layout</strong>
+                      <h3>Race Map (Active Cases)</h3>
+                      <p>Global</p>
+                      <strong>Javascript</strong>
                     </div>
       
                   </div> 
