race chart bug fix

--- a/viz-single-D3_race_chart.html
+++ b/viz-single-D3_race_chart.html
@@ -79,7 +79,7 @@
       <div class="container">
       <p>Using Active Cases Data, this race chart shows the ranking of outstanding cases (unresolved) based on the country per day.</p>
       <!-- PASTE VISUALIZATION CODE SNIPPET HERE -->
-        <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1856100" data-url="/race_chart.html"><script src="js/flourish.js"></script></div>
+        <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1856100" data-url="race_chart.html"><script src="js/flourish.js"></script></div>
       <!-- THIS IS THE END OF THE VISUALIZATION SNIPPET -->
       </div>
     </div>
