added spread map

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
             <div class="ftco-media-1">
               <div class="ftco-media-1-inner">
-                <a href="viz-single-Tableau_Active.html" class="d-inline-block mb-4"><img src="images/velocity_chart.jpg" alt="FImageo" class="img-fluid"></a>
+                <a href="viz-single-Tableau_Active.html" class="d-inline-block mb-4"><img src="images/map_active.jpg" alt="FImageo" class="img-fluid"></a>
                 <div class="ftco-media-details">
-                  <h3>Active Cases</h3>
+                  <h3>Active Cases Map with Timeline</h3>
                   <p>Global</p>
                   <strong>Tableau</strong>
                 </div>
@@ -127,9 +127,9 @@
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
               <div class="ftco-media-1">
                   <div class="ftco-media-1-inner">
-                    <a href="viz-single-D3_race_chart.html" class="d-inline-block mb-4"><img src="images/spread_map.jpg" alt="Image" class="img-fluid"></a>
+                    <a href="viz-single-D3_race_chart.html" class="d-inline-block mb-4"><img src="images/race_chart_active.jpg" alt="Image" class="img-fluid"></a>
                     <div class="ftco-media-details">
-                      <h3>Race Map (Active Cases)</h3>
+                      <h3>Race Map of Active Cases</h3>
                       <p>Global</p>
                       <strong>Javascript</strong>
                     </div>
@@ -140,9 +140,9 @@
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
               <div class="ftco-media-1">
                   <div class="ftco-media-1-inner">
-                    <a href="viz-single.html" class="d-inline-block mb-4"><img src="images/growth_rate_chart.jpg" alt="Image" class="img-fluid"></a>
+                    <a href="viz-single-Tableau_Active_Area.html" class="d-inline-block mb-4"><img src="images/area_chart_active.jpg" alt="Image" class="img-fluid"></a>
                     <div class="ftco-media-details">
-                      <h3>Growth Rate</h3>
+                      <h3>Area Plot Timeline of Active Cases</h3>
                       <p>Global</p>
                       <strong>Tableau</strong>
                     </div>
@@ -180,7 +180,7 @@
             <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
                 <div class="ftco-media-1">
                     <div class="ftco-media-1-inner">
-                      <a href="viz-single.html" class="d-inline-block mb-4"><img src="images/spread_map.jpg" alt="Image" class="img-fluid"></a>
+                      <a href="viz-single-Spread-map.html" class="d-inline-block mb-4"><img src="images/spread_map.jpg" alt="Image" class="img-fluid"></a>
                       <div class="ftco-media-details">
                         <h3>Spread Map</h3>
                         <p>Singapore</p>
