added back button

--- a/viz-single-Spread-map.html
+++ b/viz-single-Spread-map.html
@@ -97,6 +97,7 @@
 
 
   <div class="site-section" id="main-view">
+  <a href="javascript:history.back()" style="font-size: 40px; position: absolute; left: 30px; top: 130px;">&larr;</a>
       <div class="container">
       <p>This spread map accounts for the infected during the first 100 days as documented by the Ministry of Health in Singapore. Use your mouse to pan and zoom</p>
       <table>
