--- a/viz-single-Tableau_Active.html
+++ b/viz-single-Tableau_Active.html
@@ -76,6 +76,7 @@
 
 
   <div class="site-section" id="main-view">
+  <a href="javascript:history.back()" style="font-size: 40px; position: absolute; left: 30px; top: 130px;">&larr;</a>
       <div class="container">
       <p>This map shows the active cases (confirmed - results(death, recovered)). Using this view allows you to see the momentum of COVID-19 as it migrates with time. Use the timeline bar on the bottom to scroll through time. Load time may differ based on your region or internet bandwidth.</p>
       <!-- PASTE VISUALIZATION CODE SNIPPET HERE -->
