--- a/viz-single-Tableau_Active_Area.html
+++ b/viz-single-Tableau_Active_Area.html
@@ -76,6 +76,7 @@
 
 
   <div class="site-section" id="main-view">
+  <a href="javascript:history.back()" style="font-size: 40px; position: absolute; left: 30px; top: 130px;">&larr;</a>
       <div class="container" style="max-width:1500px;">
       <p>This area chart plots out the progression of active cases throughout time and allows users to compare between countries. The plot can be viewed in full screen using the maximize button below.</p>
       <!-- PASTE VISUALIZATION CODE SNIPPET HERE -->
