--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
             <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 ">
                 <div class="ftco-media-1">
                     <div class="ftco-media-1-inner">
-                      <a href="viz-single.html" class="d-inline-block mb-4"><img src="images/velocity_chart.jpg" alt="FImageo" class="img-fluid"></a>
-                      <p class="img-text-block">Coming soon, this chart is not available yet</p>
+                      <a href="viz-single-day_chart.html" class="d-inline-block mb-4"><img src="images/velocity_chart.jpg" alt="FImageo" class="img-fluid"></a>
+                      <p class="img-text-block">Use this chart to see percent changes per day since first reported case</p>
                       <div class="ftco-media-details">
                         <h3>Velocity Chart</h3>
                         <p>Global</p>
-                        <strong>HTML Line Chart</strong>
+                        <strong>Tableau</strong>
                       </div>
         
                     </div> 
