--- a/viz-single-Spread-map.html
+++ b/viz-single-Spread-map.html
@@ -80,9 +80,9 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="/#home-section" class="nav-link">Home</a></li>
-                <li><a href="/#gallery-section" class="nav-link">Visualizations</a></li>
-                <li><a href="/#about-section" class="nav-link">About</a></li>
+                <li><a href="/~tylerryu/#home-section" class="nav-link">Home</a></li>
+                <li><a href="/~tylerryu/#gallery-section" class="nav-link">Visualizations</a></li>
+                <li><a href="/~tylerryu/#about-section" class="nav-link">About</a></li>
               </ul>
             </nav>
           </div>
